--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "hugeicons-react": "^0.3.0",
     "isbot": "^4.1.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@remix-run/dev": "^2.16.4",
