--- a/package.json
+++ b/package.json
@@ -1,46 +1,58 @@
 {
-  "name": "portfolio",
-  "private": true,
-  "sideEffects": false,
-  "type": "module",
-  "scripts": {
-    "build": "remix vite:build",
-    "dev": "remix vite:dev",
-    "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
-    "start": "remix-serve ./build/server/index.js",
-    "typecheck": "tsc"
-  },
-  "dependencies": {
-    "@remix-run/node": "^2.16.4",
-    "@remix-run/react": "^2.16.4",
-    "@remix-run/serve": "^2.16.4",
-    "framer-motion": "^12.6.3",
-    "hugeicons-react": "^0.3.0",
-    "isbot": "^4.1.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "zustand": "^5.0.3"
-  },
-  "devDependencies": {
-    "@remix-run/dev": "^2.16.4",
-    "@types/react": "^18.2.20",
-    "@types/react-dom": "^18.2.7",
-    "@typescript-eslint/eslint-plugin": "^6.7.4",
-    "@typescript-eslint/parser": "^6.7.4",
-    "autoprefixer": "^10.4.19",
-    "eslint": "^8.38.0",
-    "eslint-import-resolver-typescript": "^3.6.1",
-    "eslint-plugin-import": "^2.28.1",
-    "eslint-plugin-jsx-a11y": "^6.7.1",
-    "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "postcss": "^8.4.38",
-    "tailwindcss": "^3.4.4",
-    "typescript": "^5.1.6",
-    "vite": "^6.0.0",
-    "vite-tsconfig-paths": "^4.2.1"
-  },
-  "engines": {
-    "node": ">=20.0.0"
-  }
+	"name": "portfolio",
+	"private": true,
+	"sideEffects": false,
+	"type": "module",
+	"scripts": {
+		"build": "remix vite:build",
+		"dev": "remix vite:dev",
+		"lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
+		"start": "remix-serve ./build/server/index.js",
+		"typecheck": "tsc"
+	},
+	"dependencies": {
+		"@radix-ui/react-dialog": "^1.1.7",
+		"@react-pdf-viewer/core": "^3.12.0",
+		"@remix-run/node": "^2.16.4",
+		"@remix-run/react": "^2.16.4",
+		"@remix-run/serve": "^2.16.4",
+		"class-variance-authority": "^0.7.1",
+		"clsx": "^2.1.1",
+		"embla-carousel-react": "^8.6.0",
+		"framer-motion": "^12.6.3",
+		"hugeicons-react": "^0.3.0",
+		"isbot": "^4.1.0",
+		"link-preview-js": "^3.0.14",
+		"lucide-react": "^0.487.0",
+		"pdfjs-dist": "^3.4.120",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
+		"react-glimpse": "^2.0.15",
+		"tailwind-merge": "^3.2.0",
+		"tailwindcss-animate": "^1.0.7",
+		"zustand": "^5.0.3"
+	},
+	"devDependencies": {
+		"@remix-run/dev": "^2.16.4",
+		"@types/react": "^18.2.20",
+		"@types/react-dom": "^18.2.7",
+		"@typescript-eslint/eslint-plugin": "^6.7.4",
+		"@typescript-eslint/parser": "^6.7.4",
+		"autoprefixer": "^10.4.19",
+		"eslint": "^8.38.0",
+		"eslint-import-resolver-typescript": "^3.6.1",
+		"eslint-plugin-import": "^2.28.1",
+		"eslint-plugin-jsx-a11y": "^6.7.1",
+		"eslint-plugin-react": "^7.33.2",
+		"eslint-plugin-react-hooks": "^4.6.0",
+		"postcss": "^8.4.38",
+		"tailwindcss": "^3.4.4",
+		"typescript": "^5.1.6",
+		"vite": "^6.0.0",
+		"vite-plugin-static-copy": "^2.3.1",
+		"vite-tsconfig-paths": "^4.2.1"
+	},
+	"engines": {
+		"node": ">=20.0.0"
+	}
 }
