--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
 		"zustand": "^5.0.3"
 	},
 	"devDependencies": {
+		"@netlify/remix-adapter": "^2.6.1",
 		"@remix-run/dev": "^2.16.4",
 		"@types/react": "^18.2.20",
 		"@types/react-dom": "^18.2.7",
